--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fontawesome-pro-6.1.0-web/fontawesome-pro-6.1.0-web/css/all.css">
+    <!-- CSS AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body ng-app="MyApp">
     
@@ -60,5 +62,10 @@
     <script src="./js/controllers/MyProgramController.js"></script>
     <script src="./js/controllers/CalorieCalculatorControler.js"></script>
     <script src="./js/controllers/ContactController.js"></script>
+    <!-- JS AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
