--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- AngularJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- CSS -->
@@ -18,6 +20,8 @@
     <link rel="stylesheet" href="./css/fontawesome-pro-6.1.0-web/fontawesome-pro-6.1.0-web/css/all.css">
     <!-- CSS AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- Breakpoints -->
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body ng-app="MyApp">
     
